# openGL-experimentation

./: CMakeLists.txt  README.md  main.cpp  noise.cpp  noise.h
include/: camera.hpp  filesystem.h  shaders.hpp
src/: 3d.cpp  EBO.cpp  Makefile  hellotriangle-problems.cpp  hellotriangle.cpp  main.cpp  shaders-problems.cpp  textures.cpp  transformations.cpp
src/shaders/: 3d.fs  3d.vs  shaders-problems.fs  shaders-problems.vs  textures.fs  textures.vs  transformations.fs  transformations.vs
